Fix broken layout when resizing window

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -62,9 +62,11 @@ body {
 
 #left-pane {
   display: grid;
+  grid-template-rows: 50px 1fr;
   grid-column: 1;
   grid-row: 1;
-  min-height: 100%;
+  min-height: 0;
+  height: 100%;
   width: 200px;
   align-content: start;
   color: white;
@@ -155,10 +157,12 @@ body {
 
 #main {
   display: grid;
+  grid-template-rows: 50px 1fr;
   grid-column: 2;
   grid-row: 1;
   align-content: start;
-  min-height: 100%;
+  min-height: 0;
+  height: 100%;
   width: 100%;
 
   @media all and (max-width: 699px) {
